spacing on questions page needs to be fixed

--- a/src/pages/questions/questions.scss
+++ b/src/pages/questions/questions.scss
@@ -214,7 +214,7 @@ $input-border:#dcdcdc;
 }
   .qspacer {
     font-size: 0;
-    height: 200px;
+    height: 250px;
     line-height: 0;
     border: 0px;
     /* testing only */
